css/vote.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  min-height: 100dvh;
  background-color: #f0e6d2;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.school-name {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 1rem;
  color: #615335;
}

.divider {
  margin: 10px 0;
  width: 35%;
  height: 2px;
  background: #615335;
}

/* SECTION */

.voting-section {
  width: 100%;
  max-width: 900px;
  margin: auto;
  padding: 20px;
}

/* TABS */

.tabs {
  position: relative;
  display: flex;
  justify-content: space-between;
  border-bottom: 2px solid #ccc;
}


.tab {
  flex: 1;
  padding: 15px;
  border: none;
  background: none;
  font-size: 18px;
  cursor: pointer;
}

/* UNDERLINE */

.underline {
  position: absolute;
  bottom: -2px;
  left: 0;
  width: 33.33%;
  height: 3px;
  background: black;
  transition: 0.3s;
}

/* CONTENT */

.tab-content {
  margin-top: 20px;
}

/* GROUPS */

.group {
  display: none;
}

.group.active {
  display: block;
}


/* CONTENT BOX */

.content-box {
  display: flex;
  min-height: 200px;
  border: 1px solid #ccc;
  padding: 20px;
  gap: 4rem;
  justify-content: center;
}

.chair-card {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  border-radius: 10px;
  /* margin-bottom: 10px; */
  max-width: 200px;
  box-shadow: 0 4px 8px 0 rgba(97, 83, 53, 0.7);
}

img {
  width: 100%;
  border-radius: 10px 10px 0 0;
}

.vote-btn {
  padding: 10px 20px;
  border-radius: 10px;
  background: #181b4c;
  color: white;
  border: solid 2px #181b4c;
  transition: all 0.3s ease-in-out;
  margin-bottom: 5px;
}

.vote-btn:hover {
  background: transparent;
  border: solid 2px #615335;
  color: #181b4c;
}

.vote-btn.voted {
  background: #39a84f !important;
  /* green for voted */
  /* border-radius: 50%; */
  /* padding: 10px; */
  color: white;
  position: relative;
}

.vote-btn.voted::after {
  content: "✔";
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 40px;
  font-weight: bold;
}

.chair-card.disabled {
  opacity: 0.5;
  /* darken unvoted candidates */
  pointer-events: none;
  /* disable clicking */
}

